Prevent logo taking over on smaller screens.

--- a/src/components/intro/style.scss
+++ b/src/components/intro/style.scss
@@ -40,7 +40,7 @@
 
 .logo-sizer {
   width: 90%;
-  max-width: 480px;
+  max-width: 52vh;
   margin: 0 auto;
 }
 
